--- a/packages.config
+++ b/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="107.1.12" targetFramework="net472" />
+  <package id="cef.redist.x86" version="107.1.12" targetFramework="net472" />
   <package id="CsvHelper" version="30.0.1" targetFramework="net472" />
   <package id="LiteDB" version="5.0.13" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net472" />
+  <package id="Selenium.Support" version="4.7.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="4.7.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
